<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proprog.inventoryapp.DetailedActivity">

    <RelativeLayout
        android:id="@+id/edit_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_action_camera" />

        <EditText
            android:id="@+id/product_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_image"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/product_title_string"/>

        <EditText
            android:id="@+id/product_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_title_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/product_price_string"/>
        <EditText
            android:id="@+id/product_quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_price_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/product_quantity_string"/>
        <EditText
            android:id="@+id/product_supplier_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_quantity_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/product_supplier_string"/>

        <EditText
            android:id="@+id/product_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_supplier_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/product_supplier_email_string"/>

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="ITEM" />

            <TextView
                android:id="@+id/tv_quantity_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                tools:text="quantity : 2" />

            <TextView
                android:id="@+id/tv_price_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                tools:text="price : 12$" />

            <Button
                android:id="@+id/btn_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/sale_button_back"
                android:text="@string/order_button_text"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_increase"
            app:fabSize="normal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_delete"
            app:fabSize="normal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_decrease"
            app:fabSize="normal" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
